--- a/test/fixtures/foods.yml
+++ b/test/fixtures/foods.yml
@@ -1,8 +1,8 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
-  measure_unit: MyString
+  name: Tomatoes
+  measure_unit: Ut.
   price: 1.5
   quantity: 1
   user: one
